--- a/style.css
+++ b/style.css
@@ -3,5 +3,12 @@ body{
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  width: 20%;
+  height: 20px solid #fff;
+  font-family: source sans Pro, sans-serif;
+  padding: 20px;
+  margin: 20px auto;
+  margin: 20px;
+  max-width: 700px;
   
 }
