--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(image/test.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(test.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
