--- a/blogs/style.css
+++ b/blogs/style.css
@@ -1,102 +1,30 @@
-* {
-  margin: 0;
-  padding: 0;
-}
 body {
-  font-family: 'Poppins', sans-serif;
-}
-.wrapper {
-  width: 1170px;
-  margin: auto;
-}
-header {
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://i.postimg.cc/PqzyK69Z/Stock-Snap-UXPJM6-WZA7.jpg);
-  height: 100vh;
-  -webkit-background-size: cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.postimg.cc/pLnG9m56/pexels-tirachard-kumtanom-733852.jpg);
   background-size: cover;
-  background-position: center center;
-  position: relative;
+  background-position: center;
+  background-attachment: fixed;
+  width: 20%;
+  height: 20px solid #fff;
+  font-family: source sans Pro, sans-serif;
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 700px;
 }
-.nav-area {
-  float: right;
-  list-style: none;
-  margin-top: 30px;
-}
-.nav-area li {
-  display: inline-block;
-}
-.nav-area li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 5px 20px;
-  font-family: poppins;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-.nav-area li a:hover {
-  background: #fff;
-  color: #333;
-}
-.logo {
-  float: left;
-}
-.logo img {
-  width: 100%;
-  padding: 15px 0;
-}
-.welcome-text {
-  position: absolute;
-  width: 600px;
-  height: 300px;
-  margin: 20% 30%;
-  text-align: center;
-}
-.welcome-text h1 {
-  text-align: center;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 60px;
-}
-.welcome-text h1 span {
-  color: #00fecb;
-}
-.welcome-text a {
-  border: 1px solid #fff;
-  padding: 10px 25px;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 14px;
-  margin-top: 20px;
-  display: inline-block;
-  color: #fff;
-}
-.welcome-text a:hover {
-  background: #fff;
-  color: #333;
-}
-/*resposive*/
 
-@media (max-width:600px) {
-  .wrapper {
-    width: 100%;
-  }
-  .logo {
-    float: none;
-    width: 50%;
-    text-align: center;
-    margin: auto;
-  }
-  img {
-    width: ;
-  }
-  .nav-area {
-    float: none;
-    margin-top: 0;
-  }
-  .nav-area li a {
-    padding: 5px;
-    font-size: 11px;
-  }
-  .nav-area {
-    text-align: center;
-  }
+.blog
+{
+  margin-bottom: 20px
+}
+
+.date
+{
+  color: #fff;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  font-weight; 600;
+}
+.paragraph
+{
+  border-left: 5px solid #2370a5;
+  padding-left: 5px;
+}
