--- a/blogs/style.css
+++ b/blogs/style.css
@@ -1,3 +1,23 @@
+.nav-area {
+  float: right;
+  list-style: none;
+  margin-top: 0px;
+}
+.nav-area li {
+  display: inline-block;
+}
+.nav-area li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 20px;
+  font-family: poppins;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.nav-area li a:hover {
+  background: #fff;
+  color: #333;
+}
 body { 
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.postimg.cc/TYS7JYC8/pexels-tom-swinnen-1309766.jpg);
   background-size: cover;
@@ -22,6 +42,7 @@ body {
   letter-spacing: 0.2rem;
   text-transform: uppercase;
   font-weight; 700;
+  margin-top: 30px;
 }
 .paragraph
 {
