--- a/about/style.css
+++ b/about/style.css
@@ -1,5 +1,5 @@
 .nav-area {
-  float: right;
+  float: left;
   list-style: none;
   margin-top: 0px;
 }
@@ -41,12 +41,12 @@ body {
   color: #fff;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
-  font-weight; 700;
+  font-weight: 700;
   margin-top: 30px;
 }
 .paragraph
 {
-  border-left: 5px solid #2370a5;
+  /*border-left: 20px solid #2370a5;*/
   padding-left: 5px;
 }
 
